@@ -1,3 +1,8 @@
+2022-01-26  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode-menu, ebuild-repo-mode-menu):
+	Add entry for customize-group.
+
 2022-01-16  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.55 released.
